Replace some double constructors with Double#valueOf