@@ -21,9 +21,6 @@
 
 package ch.njol.skript.expressions;
 
-import org.bukkit.event.Event;
-import org.eclipse.jdt.annotation.Nullable;
-
 import ch.njol.skript.Skript;
 import ch.njol.skript.doc.Description;
 import ch.njol.skript.doc.Examples;
@@ -34,6 +31,9 @@ import ch.njol.skript.lang.ExpressionType;
 import ch.njol.skript.lang.SkriptParser.ParseResult;
 import ch.njol.skript.lang.util.SimpleLiteral;
 import ch.njol.util.Kleenean;
+
+import org.bukkit.event.Event;
+import org.eclipse.jdt.annotation.Nullable;
 
 /**
  * @author Peter Güttinger
@@ -47,8 +47,9 @@ public class LitPi extends SimpleLiteral<Double> {
 		Skript.registerExpression(LitPi.class, Double.class, ExpressionType.SIMPLE, "[the] pi [(number|double|constant)]");
 	}
 	
+	@SuppressWarnings("null")
 	public LitPi() {
-		super(new Double(Math.PI), false);
+		super(Double.valueOf(Math.PI), false);
 	}
 	
 	@Override
